--- a/Faithful HD Characters/mod.ini
+++ b/Faithful HD Characters/mod.ini
@@ -7,7 +7,7 @@ Date="2025-03-02"
 AuthorURL=""
 
 [Main]
-UpdateServer=""
+UpdateServer="https://raw.githubusercontent.com/ZEROES07/SURecompFaithfulHD/refs/heads/main/Faithful%20HD%20Characters"
 SaveFile=""
 ID="MattCrafts.SURecomp.FaithfulHDCharacters"
 IncludeDir0="sonic"
